--- a/pages/index.html
+++ b/pages/index.html
@@ -18,9 +18,6 @@
      <!-- REMIX ICON  -->
      <link rel="stylesheet" href="../assets/pluggins/remixicon/remixicon.css">
 </head>
-<style type="text/css">
-
-</style>
 
 <body class="body font-[Poppins] text-sm box-border">
      <div class="mx-auto scroll_smoother">
@@ -35,9 +32,9 @@
                          </div>
                          <div class="items-center hidden gap-8 nav_items sm:flex text-md target">
                               <a class="nav__links text-white h-[72px] grid place-items-center hover:text-primary transition-all duration-200"
-                                   href="">Home</a>
+                                   href="./courses.html">Courses</a>
                               <a class="nav__links text-white h-[72px] grid place-items-center hover:text-primary transition-all duration-200"
-                                   href="">Services</a>
+                                   href="">Programs</a>
                               <a class="nav__links text-white h-[72px] grid place-items-center hover:text-primary transition-all duration-200"
                                    href="">About Us</a>
                               <a class="nav__links text-white h-[72px] grid place-items-center hover:text-primary transition-all duration-200"
@@ -72,7 +69,8 @@
                </div>
           </header>
           <main>
-               < class="content">
+               <div class="content">
+
                     <section class="flex items-center justify-center h-screen section section_1">
                          <div
                               class="landing_wrapper h-[calc(100%_-_3%)] w-[calc(100%_-_1.5%)] rounded-[2rem] overflow-hidden relative bg-black ">
@@ -149,6 +147,8 @@
                               </div>
                          </div>
                     </section>
+
+
                     <section class="h-screen bg-white section section_2">
                          <div class="flex flex-col items-center justify-between max-w-screen-xl m-auto bg-white ">
                               <!-- div contains heading,discription and about us button -->
@@ -312,6 +312,8 @@
                               </div>
                          </div>
                     </section>
+
+
                     <section class="relative h-screen overflow-hidden section section_3">
                          <div
                               class="flex items-center content-center justify-center w-full h-screen overflow-hidden panal_main flex-c">
@@ -385,6 +387,8 @@
                               </div>
                          </div>
                     </section>
+
+
                     <section class="bg-white section section_4">
                          <div class="h-screen md:flex scroll-smooth">
                               <div class="flex flex-col justify-around w-full h-full px-12 py-10 md:w-1/2">
@@ -495,6 +499,8 @@
                               </div>
                          </div>
                     </section>
+
+
                     <section class="section section_5">
                          <div
                               class="flex items-center content-center justify-center w-full h-screen overflow-hidden panal_main flex-c">
@@ -520,30 +526,51 @@
                                                             <!-- Iframe, simple website - don't forget to remove glare -->
                                                             <!-- <iframe src="http://example.com" frameborder="0"></iframe> -->
 
+                                                            <div class="pa-hero-bg-overlay"></div>
+                                                       </div>
+                                                  </div>
+                                                  <div
+                                                       class="mobile_screen_postion h-[165px] w-[345px] rounded-3xl border-[6px] border-[#373435] absolute overflow-hidden -bottom-8 -left-24">
+                                                       <div
+                                                            class="absolute top-0 bottom-0 left-0 right-0 bg-gray-900 mobile_screen">
+                                                            <video allowfullscreen poster="../assets/videos/hero.gif"
+                                                                 class="video-ux-design" playsinline="true"
+                                                                 webkit-playsinline="true" muted="muted">
+                                                                 <source src="../assets/videos/SLM_Dashboard.mp4"
+                                                                      id="sample" type="video/mp4">
+                                                            </video>
                                                        </div>
                                                   </div>
                                              </div>
                                         </div>
-                                        <div class="pa-hero-bg-overlay"></div>
+
                                    </div>
                               </div>
                               <div class="absolute font-bold text-white eduportal lg:text-6xl">
                                    <h1>EduCraft Portal</h1>
                               </div>
                          </div>
-                         <div class="flex flex-col justify-center w-4/6 gap-10 m-auto text-center">
-                              <div class="text-6xl font-bold text-black eduportal_">
+                         <div
+                              class="relative flex flex-col justify-center w-4/6 gap-10 m-auto mb-5 text-center -top-20">
+                              <div class="text-6xl font-bold text-black eduportal_ lptitle_span">
                                    <h1>EduCraft Portal</h1>
                               </div>
-                              <p>Interactive learning through EduCraft. Best robotics courses. Engaging multimedia resources. Track progress on a dynamic leaderboard. Earn recognition and certificates.</p>
-                              <img class="w-1/2 m-auto" src="../assets/images/viewports.png" alt="">
+                              <p class="lptitle_span">Interactive learning through EduCraft. Best robotics courses.
+                                   Engaging multimedia resources. Track progress on a dynamic leaderboard. Earn
+                                   recognition and certificates.</p>
+                              <a class="mx-auto btn_md primary_bg w-fit" href="">
+                                   <span>Get Access </span>
+                              </a>
+                              <img class="w-1/2 m-auto lptitle_span" src="../assets/images/viewports.png" alt="">
                          </div>
 
                     </section>
+
+
                     <section class="h-screen bg-black section section_6"></section>
-     </div>
-     </main>
-     <footer></footer>
+               </div>
+          </main>
+          <footer></footer>
      </div>
 
 
